fix the spacing issue with the symbols ny adding a width of 15% and add id and classes to score board section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ text-align: center;
 
 .symbol {
     display: inline-block;
+    width: 15%;
 }
 
 /* button selectors styling rules */
